FIX bug (svg submit button disappearing on iphone)

--- a/src/features/searchBar/SearchBar.css
+++ b/src/features/searchBar/SearchBar.css
@@ -7,6 +7,8 @@ form {
     width: 1.6rem;
     height: 1.6rem;
     margin: 0;
+    fill: black;
+    color: black;
 }
 
 button {
